# flowzmith

./: .env.example  .gitignore  CLI_README.md  Dockerfile  Dockerfile.cli  IPFS_INTEGRATION.md  README.md  cli.py  debug_workflow.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  modern-stack-hack.md  package-lock.json  package.json  requirements.txt  smart_contract_llm.db  start.sh  test_api_contract_submission.py  test_cli.py  test_enhanced_cli.py  test_flow_json.py
context/: Cadence_1.0_NFT_Contract_Deployment_Learnings.md  Cadence_Flow_Common_Issues.md  Cadence_Flow_Documentation.md  Cadence_Flow_Examples.md  Cadence_Flow_v1_Migration.md
contracts/: Organization.sol  Organization_v1.cdc  UserProfile.sol
docs/: API.md  ARCHITECTURE_DIAGRAM.md  CENTRALIZED_SCHEMA_ARCHITECTURE.md  CLI_FRONTEND_INTEGRATION_SUMMARY.md  CLI_INTEGRATION_README.md  CLI_WORKSPACE_FEATURES.md  CONVEX_INTEGRATION.md  DASHBOARD_SETUP.md  DOCUMENTATION_INDEX.md  FINAL_IMPLEMENTATION_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README_CLI_INTEGRATION.md  SETUP_CLI_INTEGRATION.md  SETUP_GUIDE.md  START_HERE.md  TERMINAL_FEATURE_SUMMARY.md  TERMINAL_OUTPUT_FEATURE.md  TESTING_CHECKLIST.md  UI_GUIDE.md  USER_GUIDE.md  VISUAL_GUIDE.md
examples/: README.md
flow-cli/: flow-cli.settings.yaml
flow_mcp/: INSTALLATION.md  README.md  __init__.py  api_integration.py  flow_mcp_server.py  mcp_client.py  pyproject.toml
flow_mcp/examples/: example_usage.py  sample_contract.cdc
(+641 files in other folders)
