[project]
name = "flow-mcp-server"
version = "0.1.0"
description = "MCP Server for Flow blockchain interactions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
flow-mcp-server = "mcp.flow_mcp_server:main"